# sam_os

./: .gdbinit  .gitignore  Cargo.toml  LICENSE  Makefile  Makefile.toml  README.md  aarch64-qemu.ld  aarch64-unknown-none.json  backtrace.sh  build.rs  script.toml
kernel/: Cargo.toml  Makefile.toml  build.rs
kernel/src/: logger.rs  main.rs  panic.rs  syscalls.rs
kernel/src/adt/: mod.rs  vec.rs
kernel/src/arch/: mod.rs
kernel/src/arch/aarch64/: .interrupts.rs.swp  aarch64-qemu.ld  backtrace.rs  barriers.rs  boot.s  context.rs  context.s  copy_from_user.s  cpuid.rs  current.rs  interrupts.S  interrupts.rs  irq.rs  mod.rs  regs.rs  smp.rs  timer.rs
kernel/src/arch/aarch64/irq/: handlers.rs  interrupts.S  interrupts.rs  interrupts.s  mod.rs
kernel/src/arch/aarch64/mm/: higher_half.c  layout.rs  mmu.rs  mmu_flags.rs  mod.rs  page_table.rs
kernel/src/arch/aarch64/orangepipc/: config.rs
kernel/src/arch/aarch64/orpipc2/: config.rs
kernel/src/arch/aarch64/qemu/: config.rs
kernel/src/drivers/: .timer.rs.swp  fdt.rs  gic.rs  irq.rs  mmio_mapper.rs  mod.rs  timer.rs  uart.rs
kernel/src/drivers/irq/: gic.rs  irq.rs  mod.rs
kernel/src/helper/: printf.rs
kernel/src/kernel/: elf.rs  misc.rs  mod.rs  percpu.rs  syscalls.rs  timer.rs
kernel/src/kernel/locking/: fake_lock.rs  mod.rs  mutex.rs  rwlock.rs  spinlock.rs  wait_queue.rs
kernel/src/kernel/object/: capabilities.rs  factory_object.rs  handle.rs  handle_allocator.rs  handle_table.rs  mod.rs  port_object.rs  signals.rs  task_object.rs  thread_object.rs  vm_object.rs  vms_object.rs
kernel/src/kernel/object/object_lib/: Cargo.toml
kernel/src/kernel/object_lib/src/: lib.rs
kernel/src/kernel/sched/: .run_queue.rs.swp  current.rs  mod.rs  run_queue.rs  ticks.rs  timer.rs
kernel/src/kernel/sched/runtime/: executor.rs  mod.rs  task.rs  waker.rs
kernel/src/kernel/tasks/: .thread.rs.swp  mod.rs  task.rs  thread.rs  thread_ep.rs
kernel/src/kernel/threading/: mod.rs  task.rs  thread.rs  thread_ep.rs  thread_table.rs
kernel/src/lib/: .mod.rs.swp  helper.rs  ida.rs  mod.rs  printf.rs  refcounter.rs  reflock.rs
kernel/src/lib/collections/: ertrie.rs  list.rs  mod.rs
kernel/src/mm/: .vms.rs.swp  layout.rs  lib.rs  mod.rs  sections.rs  types.rs  user_buffer.rs  vma_list.rs  vms.rs
kernel/src/mm/allocators/: allocator.rs  boot_alloc.rs  mod.rs  page_alloc.rs  slab.rs  stack_alloc.rs
kernel/src/mm/paging/: kernel_page_table.rs  mod.rs  page_table.rs
kernel/src/mm/vmm/: layout.rs  mod.rs  vma_list.rs  vmo.rs  vms.rs
kernel/src/object/: capabilities.rs  factory_object.rs  handle.rs  handle_table.rs  mod.rs  port_object.rs
kernel/src/object/object_lib/src/: lib.rs
kernel/src/sched/: current.rs  mod.rs  ticks.rs  timer.rs
kernel/src/sched/runtime/: executor.rs  run_queue.rs  task.rs
kernel/src/smp/: mod.rs
kernel/src/sync/: async_mutex.rs  mod.rs  mutex.rs  spinlock.rs  wait_queue.rs
kernel/src/tasks/: elf.rs  handle_page.rs  mod.rs  task.rs  thread.rs
kernel/src/tests/: mod.rs
kernel/src/uapi/: Cargo.toml
kernel/src/uapi/src/: handle.rs  lib.rs
loader/: Cargo.toml  build.rs
loader/src/: log.rs  main.rs
loader/src/arch/: aarch64-qemu.ld  boot.rs  boot.s  mod.rs
loader/src/arch/aarch64/: aarch64-qemu.ld  boot.s  mmu.rs  mod.rs
loader/src/drivers/: mod.rs
loader/src/drivers/irq/: gic.rs  mod.rs
loader/src/drivers/uart/: mod.rs  pl011.rs
loader/src/kernel/: mod.rs
loader/src/mm/: alloc.rs  layout.rs  linear_map.rs  mod.rs  page_array.rs  page_table.rs  regions.rs
loader/src/protocol/: mod.rs
rtl/: Cargo.toml
rtl/src/: cpio.rs  error.rs  handle.rs  lib.rs  misc.rs  signal.rs  syscalls.rs
rtl/src/arch/: aarch64.rs  mod.rs
rtl/src/ipc/: message.rs
rtl/src/locking/: fakelock.rs  mod.rs  spinlock.rs
rtl/src/objects/: factory.rs  mod.rs  port.rs  vmo.rs  vms.rs
rtl/src/uart/: arm_uart.rs  mod.rs
rtl/src/vmm/: mod.rs  slab.rs  types.rs
src/: main.rs  (+2 more)
src/kernel/: Cargo.toml  build.rs  misc.rs  mod.rs
src/kernel/.cargo/: config.toml
src/kernel/locking/: fake_lock.rs  mod.rs  rwlock.rs  spinlock.rs
src/kernel/sched/: entity.rs  mod.rs  run_queue.rs
src/kernel/src/: main.rs  panic.rs
src/kernel/src/arch/: board.rs  mod.rs
src/kernel/src/drivers/: mmio_mapper.rs  mod.rs  timer.rs  uart.rs
src/kernel/src/kernel/: elf.rs  misc.rs  percpu.rs  syscalls.rs  timer.rs
src/kernel/src/lib/: printf.rs
src/kernel/src/mm/: mod.rs  sections.rs  user_buffer.rs  vma_list.rs  vms.rs
src/kernel/src/tests/: mod.rs  test_descr.rs
src/kernel/threading/: mod.rs  task.rs  thread.rs  thread_ep.rs  thread_table.rs
src/userspace/interface_impl/uart/: Cargo.toml
src/userspace/interfaces/: Cargo.toml
src/userspace/interfaces/idls/: nameserver.idl
src/userspace/interfaces/src/: lib.rs
tools/builder/: Cargo.toml
tools/builder/src/: builder.rs  main.rs  runner.rs  toml.rs
userspace/apps/client/: Cargo.toml  app.toml  build.rs
userspace/apps/client/src/: main.rs
userspace/apps/console/: Cargo.toml  app.toml  build.rs
userspace/apps/console/src/: console.rs  main.rs
userspace/init/: Cargo.toml  Makefile.toml  main.rs
userspace/init/src/: .main.rs.swp  cpio.rs  interface.rs  main.rs  nameserver.rs
userspace/libs/libc/: Cargo.toml
userspace/libs/libc/src/: factory.rs  handle.rs  lib.rs  port.rs  syscalls.rs  syscalls_aarch64.rs  syscalls_x86_64.rs  task.rs
userspace/libs/rokio/: Cargo.toml
userspace/libs/rokio/procmacro/: Cargo.toml
userspace/libs/rokio/src/: executor.rs  lib.rs  port.rs
userspace/serial/: Cargo.toml
userspace/serial/src/: main.rs
userspace/services/blkdev/sdhci/: Cargo.toml  build.rs
userspace/services/pci/: Cargo.toml  build.rs
userspace/services/pci/src/: device.rs  main.rs
userspace/services/sdhci/: Cargo.toml  build.rs
userspace/services/sdhci/src/: main.rs  sdhci.rs
userspace/services/serial/uart/: Cargo.toml  build.rs
userspace/services/uart/: Cargo.toml  build.rs
userspace/services/uart/src/: ecam.rs  main.rs  pl011.rs
userspace/services/vfs/: Cargo.toml  build.rs
userspace/services/vfs/src/: main.rs
(+337 files in other folders)
