[package]
name = "sam_kernel"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitmaps = {version = "3.2.0", default-features = false}
bitflags = "1.3"
qrwlock = {version = "0.2.0", git = "https://github.com/pskrgag/rust-qrwlock.git"}
spin = {version = "0.9.4", default-features = false, features = ["once", "lazy"] }
object_lib = { path = "src/kernel/object/object_lib" }
rtl = { path = "../rtl", features = ["kernel"] }
static_assertions = "1.1.0"
loader_protocol = { path = "../loader_protocol" }
heapless = "0.9.1"
arm-gic = "0.7.1"
safe-mmio = "0.2.5"
elf = { version = "0.8.0", default-features = false }

[dev-dependencies]
test_macros = {path = "./src/tests/test_macros/"}
