[package]
name = "kernel"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitmaps = {version = "3.2.0", default-features = false}
spin = {version = "0.9.8", default-features = false, features = ["once", "lazy"] }
rtl = { path = "../rtl", features = ["kernel"] }
hal = { path = "../hal", features = ["kernel"] }
static_assertions = "1.1.0"
loader_protocol = { path = "../loader_protocol" }
heapless = { version = "0.9.1", features = ["serde"] }
safe-mmio = "0.2.5"
elf = { version = "0.8.0", default-features = false }
bitmask = { version = "0.5.0", default-features = false }
arm-gic = "0.7.1"
wavltree = { version = "0.0.8", features = ["dot"] }
aarch64-cpu = "11.2.0"
slab = { path = "../../slab" }
lazy_static = { version = "1.5.0", default-features = false, features = ["spin_no_std"] }
log = "0.4.29"
serde = { version = "1.0.228", default-features = false }
postcard = { version = "1.1.3", features = ["alloc"] }

[dev-dependencies]
test_macros = {path = "./src/tests/test_macros/"}

[build]
target = "aarch64-unknown-none-softfloat"
