[package]
name = "loader"
version = "0.1.0"
edition = "2024"

[dependencies]
aarch64-cpu = "10.0.0"
elf = { version = "0.8.0", default-features = false }
fdt = { version = "0.1.5", features = ["pretty-printing"] }
heapless = { version = "0.9.1", features = ["serde"] }
linkme = { version = "0.3.33", features = ["used_linker"] }
rtl = { path = "../rtl" }
hal = { path = "../hal" }
loader_protocol = { path = "../loader_protocol" }

[[bin]]
name = "loader"
