[package]
name = "rtl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
static_assertions = "1.1.0"
bytemuck = {version = "1.14", features = ["derive"]}

[features]
default = ["user"]
user = []
kernel = []
