[package]
name = "sam_kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
qemu = []
orpipc2 = []


[build-dependencies]
cc = "1.0"

[dependencies]
bitmaps = {version = "3.2.0", default-features = false}
bitflags = "1.3"
qrwlock = {version = "0.2.0", git = "https://github.com/pskrgag/rust-qrwlock.git"}
lock_free_buddy_allocator = "0.1.0"
spin = {version = "0.9.4", default-features = false, features = ["once"] }
object_lib = { path = "src/kernel/object/object_lib" }
rtl = { path = "../rtl", features = ["kernel"] }
intrusive-collections = { version = "*", features = ["nightly"] }
static_assertions = "1.1.0"

[dev-dependencies]
test_macros = {path = "./src/tests/test_macros/"}
