[package]
name = "builder"
version = "0.1.0"
edition = "2021"
description = "Utility for building images from toml description of a system"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "*"
simplelog = "*"
toml = "*"
serde = { version = "*", features = ["derive"] }
