[package]
name = "interfaces"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = {version = "1.14", features = ["derive"]}
rtl = {path = "../../rtl" }
ridlrt = {path = "../ridlrt" }
libc = {path = "../libc" }
