[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
libc = { path = "../../libc/" }
rtl = { path = "../../../rtl/" }
postcard = { version = "1", features = ["alloc"] }
serde = { version = "1", default-features = false  }

[build-dependencies]
ridl = { path = "../../../tools/ridl" }
