[package]
name = "console"
version = "0.1.0"
edition = "2024"

[dependencies]
libc = { path = "../../libc/" }
rtl = { path = "../../../rtl/" }
postcard = { version = "1", features = ["alloc"] }
serde = { version = "1", default-features = false  }
serde_bytes = { version = "0.11", default-features = false }

[build-dependencies]
ridl = { path = "../../../tools/ridl" }
