[package]
name = "console"
version = "0.1.0"
edition = "2024"

[dependencies]
libc = { path = "../../libs/libc" }
rtl = { path = "../../../rtl/" }
hal = { path = "../../../hal/" }
postcard = { version = "1.1.3", features = ["alloc"] }
serde = { version = "1", default-features = false  }
serde_bytes = { version = "0.11", default-features = false }
rokio = { path = "../../libs/rokio" }
heapless = "0.9.2"
bitmask = { git = "https://github.com/pskrgag/bitmask.git", default-features = false }

[build-dependencies]
ridl = { path = "../../../tools/ridl" }
