[package]
name = "libc"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustrt = {path = "procmacro"}
elf = { version = "0.7.2", default-features = false}
rtl = { path = "../../../rtl" }
hal = { path = "../../../hal" }
spin = { version = "0.9.8", default-features = false, features = ["once"] }
dlmalloc = "0.2.12"
serde = { version = "1.0.228", default-features = false }
postcard = { version = "1.1.3", features = ["alloc"] }
heapless = { version = "0.9.2", features = ["serde"] }

[lib]
name = "libc"

[features]
verbose = []
