[package]
name = "pci"
version = "0.1.0"
edition = "2024"

[dependencies]
libc = { path = "../../libs/libc" }
rtl = { path = "../../../rtl/" }
hal = { path = "../../../hal/" }
postcard = { version = "1.1.3", features = ["alloc"] }
serde = { version = "1", default-features = false  }
safe-mmio = "0.2.5"
fdt = { git = "https://github.com/IsaacWoods/fdt.git", features = ["pretty-printing"] }
pci_types = "0.10.0"
heapless = "0.9.2"
rokio = { path = "../../libs/rokio" }

[build-dependencies]
ridl = { path = "../../../tools/ridl" }
