[package]
name = "sdhci"
version = "0.1.0"
edition = "2024"

[dependencies]
libc = { path = "../../libs/libc/" }
rtl = { path = "../../../rtl/" }
hal = { path = "../../../hal/" }
postcard = { version = "1", features = ["alloc"] }
serde = { version = "1", default-features = false  }
safe-mmio = "0.2.6"
bitmask = { version = "0.5.0", default-features = false }
bitvec = { version = "1.0.1", default-features = false }

[build-dependencies]
ridl = { path = "../../../tools/ridl" }
