[package]
name = "vfs"
version = "0.1.0"
edition = "2024"

[dependencies]
libc = { path = "../../libs/libc/" }
fs = { path = "../../libs/fs/" }
rtl = { path = "../../../rtl/" }
postcard = { version = "1.1.3", features = ["alloc"] }
serde = { version = "1", default-features = false  }
cpio_reader = "0.1.2"
rokio = { path = "../../libs/rokio" }
heapless = "0.9.2"
downcast-rs = { version = "2.0.1", default-features = false }
bitmask = { path = "/home/paskripkin/Documents/git/bitmask", default-features = false }
async-trait = "0.1.89"
adt = { path = "../../../adt" }

[build-dependencies]
ridl = { path = "../../../tools/ridl/" }
