[package]
name = "sdhci"
version = "0.1.0"
edition = "2024"

[dependencies]
libc = { path = "../../../libs/libc/" }
rtl = { path = "../../../../rtl/" }
hal = { path = "../../../../hal/" }
postcard = { version = "1.1.3", features = ["alloc"] }
serde = { version = "1", default-features = false  }
safe-mmio = "0.2.6"
bitmask = { git = "https://github.com/pskrgag/bitmask.git", default-features = false }
bitvec = { version = "1.0.1", default-features = false }
heapless = "0.9.2"
rokio = { path = "../../../libs/rokio" }
modular-bitfield = "0.13.1"

[build-dependencies]
ridl = { path = "../../../../tools/ridl" }
