[package]
name = "uart"
version = "0.1.0"
edition = "2024"

[dependencies]
libc = { path = "../../../libs/libc" }
rtl = { path = "../../../../rtl/" }
hal = { path = "../../../../hal/" }
rokio = { path = "../../../libs/rokio" }
postcard = { version = "1.1.3", features = ["alloc"] }
serde = { version = "1", default-features = false  }
fdt = { version = "0.1.5", features = ["pretty-printing"] }
heapless = "0.9.2"

[build-dependencies]
ridl = { path = "../../../../tools/ridl" }
